; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dml/extr_display_rq_dlg_helpers.c_print__data_rq_misc_params_st.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dml/extr_display_rq_dlg_helpers.c_print__data_rq_misc_params_st.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display_mode_lib = type { i32 }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [56 x i8] c"DML_RQ_DLG_CALC: =====================================\0A\00", align 1
@.str.1 = private unnamed_addr constant [48 x i8] c"DML_RQ_DLG_CALC: DISPLAY_DATA_RQ_MISC_PARAM_ST\0A\00", align 1
@.str.2 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     full_swath_bytes   = %0d\0A\00", align 1
@.str.3 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     stored_swath_bytes = %0d\0A\00", align 1
@.str.4 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     blk256_width       = %0d\0A\00", align 1
@.str.5 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     blk256_height      = %0d\0A\00", align 1
@.str.6 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     req_width          = %0d\0A\00", align 1
@.str.7 = private unnamed_addr constant [47 x i8] c"DML_RQ_DLG_CALC:     req_height         = %0d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print__data_rq_misc_params_st(%struct.display_mode_lib* %0, %struct.TYPE_3__* byval(%struct.TYPE_3__) align 8 %1) #0 {
  %3 = alloca %struct.display_mode_lib*, align 8
  store %struct.display_mode_lib* %0, %struct.display_mode_lib** %3, align 8
  %4 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  %7 = load i32, i32* %6, align 4
  %8 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0), i32 %7)
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  %10 = load i32, i32* %9, align 8
  %11 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.3, i64 0, i64 0), i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.4, i64 0, i64 0), i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.5, i64 0, i64 0), i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.6, i64 0, i64 0), i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.7, i64 0, i64 0), i32 %22)
  %24 = call i32 (i8*, ...) @dml_print(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @dml_print(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
